<resources>
    <string name="Home">Home</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="agree">Agree</string>
    <string name="all_rights_reserved">All Rights Reserved.</string>
    <string name="apk_install_method">Apk Install Method</string>
    <string name="app_data">App Data</string>
    <string name="app_details_page">App Details</string>
    <string name="app_introduction">Introduction</string>
    <string name="app_name">Etralab Appstore</string>
    <string name="app_name_2">Etralab Appstore for Android</string>
    <string name="app_screenshot">Screenshot</string>
    <string name="app_size">Size</string>
    <string name="app_update_log">Update Log</string>
    <string name="app_update_time">Update Time</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cache_data">Cache Data</string>
    <string name="car">Car</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="check_updates">Check Update</string>
    <string name="checking_for_updates">Checking for Updates...</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_apk_install_method">Choose APK Install Method</string>
    <string name="classification">Classification</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_now">Clear Now</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clientVersion">Beta 0.18.0 (Build 17)</string>
    <string name="copyright">Copyright ©2023-2024 Etrasoft Network.</string>
    <string name="current_version">Current Version</string>
    <string name="devices_adapt">Adapt</string>
    <string name="disagree">Disagree</string>
    <string name="dislike">Dislike</string>
    <string name="download_and_install">Download and Install</string>
    <string name="download_ranking">Download Ranking</string>
    <string name="download_record">Download Record</string>
    <string name="downloading">Downloading...</string>
    <string name="education">Education</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exercise_and_health">Exercise &amp; Health</string>
    <string name="exit">Exit</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_check_for_updates">Failed to Check for Updates</string>
    <string name="failed_to_load_app_information">Failed to Load App Information</string>
    <string name="failed_to_load_apps_list">Failed to Load apps list</string>
    <string name="failed_to_load_update_content">Failed to Load Update Content</string>
    <string name="file_management">File Management</string>
    <string name="financial_management">Financial</string>
    <string name="force_update_prompt_information">The current version is too low, please update to the latest version first!</string>
    <string name="game">Game</string>
    <string name="hankmi_section">HankMi\'s Section</string>
    <string name="help">Help</string>
    <string name="help_for_choose_apk_install_method_text_0">Answer: \"Over Package Installer\". This option is applicable to devices that ENABLED the Package Installer.</string>
    <string name="help_for_choose_apk_install_method_text_1">For example: OPPO Watch, other Android watches that ENABLED package installer, etc.</string>
    <string name="help_for_choose_apk_install_method_text_2">\"Over WLAN Debug\". This option is applicable to devices that DISABLED the Package Installer, but have \"Debug over Wi-Fi\" function.</string>
    <string name="help_for_choose_apk_install_method_text_3">For example: HUAWEI Watch 3/3 Pro, other Android watches that have \"Debug over Wi-Fi\" function, etc.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="history_version">History Versions</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_processing">Image Processing</string>
    <string name="indicator_color_error">指示器的颜色只能设置成“@color/colorID or #000000”</string>
    <string name="input_method">Input Method</string>
    <string name="installing">Installing...</string>
    <string name="item_view_role_description">Tab</string>
    <string name="layout_selection">Layout Selection</string>
    <string name="loading_app_information">Loading App Information...</string>
    <string name="loading_apps_list">Loading Apps List...</string>
    <string name="loading_update_content">Loading Update Content...</string>
    <string name="map_navigation">Map</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mine">Mine</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="new_arrival">New Arrival</string>
    <string name="new_version">New Version</string>
    <string name="new_version_found">New Version Found</string>
    <string name="new_version_found_title">New Version</string>
    <string name="news_reading">News</string>
    <string name="no_more_apps">—— Swipe Left to Discover More ——</string>
    <string name="no_search_result">No Search Result</string>
    <string name="no_updates">No Updates</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="other">Other</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="retry">Retry</string>
    <string name="search_failed">Search Failed</string>
    <string name="search_result">Search Result</string>
    <string name="searching">Searching...</string>
    <string name="support_text">If you like Etralab Appstore, welcome to support us in the following ways.\nThank you extremely for your use and support!</string>
    <string name="support_us">Support Us</string>
    <string name="use_alipay_to_support">Alipay          </string>
    <string name="use_package_installer_to_install_apk">Over Package Installer</string>
    <string name="use_wechat_to_support">Wechat Pay</string>
    <string name="use_wlan_debug_to_install_apk">Over WLAN Debug</string>
    <string name="user_agreement">User Agreement</string>
    <string name="versionCode">Build 17</string>
    <string name="versionName">Beta 0.18.0</string>
    <string name="which_should_i_choose">What Option Should I Choose?</string>
</resources>