<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="18sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/help"/>
    <ScrollView android:id="@+id/sv_layout_body" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginHorizontal="20dp">
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="19dp" android:layout_height="19dp" android:src="@drawable/icon_help_small_grey"/>
                <TextView android:textSize="14sp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/which_should_i_choose"/>
            </LinearLayout>
            <TextView android:textSize="12sp" android:textColor="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help_for_choose_apk_install_method_text_0"/>
            <TextView android:textSize="10sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_for_choose_apk_install_method_text_1"/>
            <TextView android:textSize="12sp" android:textColor="#ffffff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:text="@string/help_for_choose_apk_install_method_text_2"/>
            <TextView android:textSize="10sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_for_choose_apk_install_method_text_3"/>
            <Button android:textSize="14sp" android:layout_gravity="center_horizontal" android:id="@+id/btn_ok" android:background="@drawable/icon_button_blue_full" android:layout_width="84dp" android:layout_height="30dp" android:layout_marginTop="20dp" android:layout_marginBottom="30dp" android:text="@string/ok"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
