<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:orientation="vertical" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/ll_help_for_choose_app_install_method" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_apk_install_method"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp">
            <ImageView android:layout_width="16dp" android:layout_height="16dp" android:src="@drawable/icon_help_small_grey"/>
            <TextView android:textSize="12sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:text="@string/which_should_i_choose"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:id="@+id/ll_use_package_installer" android:layout_width="wrap_content" android:layout_height="35dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/iv_use_package_installer" android:layout_width="19dp" android:layout_height="19dp" android:src="@drawable/icon_radio_button_background"/>
                    <TextView android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/use_package_installer_to_install_apk"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:id="@+id/ll_use_wlan_adb" android:layout_width="wrap_content" android:layout_height="35dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/iv_use_wlan_adb" android:layout_width="19dp" android:layout_height="19dp" android:src="@drawable/icon_radio_button_background"/>
                    <TextView android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/use_wlan_debug_to_install_apk"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="14sp" android:id="@+id/btn_choose" android:background="@drawable/icon_button_blue_full" android:layout_width="84dp" android:layout_height="30dp" android:layout_marginTop="10dp" android:text="@string/ok"/>
</LinearLayout>
