<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="18sp" android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/user_agreement"/>
    <ScrollView android:id="@+id/sv_layout_body" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12sp" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:text="唯趣应用商店用户协议\10(ver1.4 Written by KiTick, 2024.01.05)\10一．前言\10欢迎使用唯趣应用商店（原Etralab应用商店）（以下简称为本软件）。在使用本软件前，请先仔细阅读并同意该用户协议。\10二．目前，本软件完全免费。如果您是通过其他渠道付费下载的，请立即申请退款，并向本软件的开发者举报。\10三．关于本软件公测的相关声明\103.1、目前，本软件正处于公开测试阶段，功能并不完善，可能存在较多漏洞。\10四．版权声明\104.1、本软件为北京益软网络科技有限公司的旗下工作室唯趣实验室的产品，本软件的版权归北京益软网络科技有限公司所有。任何组织或个人不得侵权，违者必究。\104.2、本软件中上架的软件的版权归其开发者所有，本软件仅起搬运作用。如有侵权，请立即与本软件的开发者联系。\10五．隐私政策\10在使用本软件时，会要求用户给予相应权限。本软件要求的权限仅为用户可以获得更好的使用体验，不会收集用户的个人隐私。请用户放心给予权限。\10六．免责声明\10在使用本软件时，可能会要求用户打开系统设置中的开发者选项及adb调试等，可能会有极小概率对您设备的软件或硬件造成损坏。如果用户因为使用本软件导致设备异常，本软件、唯趣实验室及北京益软网络科技有限公司概不负责。\10七．本软件用户协议未涉及的问题请参⻅国家有关法律法规，当本用户协议与国家有关法律法规冲突时，以国家法律法规为准。\10八．本软件用户协议、相关声明的版权及其修改权、更新权和最终解释权均归北京益软网络科技有限公司所有。" android:layout_marginHorizontal="20dp"/>
            <Button android:id="@+id/btn_agree" android:background="#161616" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginTop="10dp" android:text="@string/agree"/>
            <Button android:background="#323232" android:layout_width="match_parent" android:layout_height="1dp"/>
            <Button android:id="@+id/btn_disagree" android:background="#161616" android:layout_width="match_parent" android:layout_height="35dp" android:text="@string/disagree"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
