<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="#000000" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@+id/ll_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3dp">
            <ImageView android:layout_width="17dp" android:layout_height="17dp" android:layout_marginLeft="13dp" android:layout_marginTop="6dp" android:src="@drawable/icon_arrow_back"/>
            <TextView android:textSize="15sp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/support_us"/>
        </LinearLayout>
        <TextClock android:textSize="15sp" android:textColor="@color/white" android:gravity="right" android:id="@+id/tc_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="16dp" android:layout_centerHorizontal="true" android:format12Hour="hh:mm" android:format24Hour="HH:mm"/>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp">
            <TextView android:textSize="13sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18dp" android:layout_marginRight="12dp" android:text="@string/support_text"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/ll_support_us_with_wechat" android:background="@drawable/icon_background_wechat_pay_button" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="18dp" android:layout_marginTop="8dp" android:layout_marginRight="18dp" android:layout_marginHorizontal="18dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="12dp">
                    <ImageView android:layout_width="25dp" android:layout_height="25dp" android:src="@drawable/icon_wechat_white"/>
                    <TextView android:textSize="13sp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:text="@string/use_wechat_to_support"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/ll_support_us_with_alipay" android:background="@drawable/icon_background_alipay_button" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="18dp" android:layout_marginTop="2dp" android:layout_marginRight="18dp" android:layout_marginBottom="15dp" android:layout_marginHorizontal="18dp">
                <ImageView android:layout_width="25dp" android:layout_height="25dp" android:src="@drawable/icon_alipay_white"/>
                <TextView android:textSize="13sp" android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:text="@string/use_alipay_to_support"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
